# Attendance-recording-system

./: .gitignore  README.md
AS608/: fingerprint.cpp  fingerprint.h  main_test.cpp
AS608/AS608test/: CMakeLists.txt  LICENSE  as608.c  as608.cpp  fingerprint.cpp  fingerprint.h  fp  main.c  main_test.cpp  makefile  utils.cpp
AS608/FingerPrint_Test_Software/: 14.mb  FGTemplet.mb
Camera_thread/Camera_class_version/: CMakeLists.txt  main.cpp
Camera_thread/Camera_function_test/: camera  camera_example.cpp
Doxygen/html/: addcoursewindow_8h_source.html  addstudentwindow_8h_source.html  annotated.html  class_add_course_window-members.html  class_add_course_window.html  class_add_student_window-members.html  class_add_student_window.html  class_course_d_b-members.html  class_course_d_b.html  class_email-members.html  class_email.html  class_main_window-members.html  class_main_window.html  class_my_exception-members.html  class_my_exception.html  class_my_window-members.html  class_my_window.html  class_r_f_i_d-members.html  class_r_f_i_d.html  class_student_d_b-members.html  class_student_d_b.html  classes.html  classpn532__rpi-members.html  classpn532__rpi.html  course_d_b_8h_source.html  dir_197835e4e58489ea8846badada778896.html  dir_1e31052ed4c33e5905707497b47d6bbf.html  dir_53ff6e473d46d4e442ba5a7ce9f895e3.html  dir_7d631b97476134457ab0534b30b7ba78.html  dir_c38fb02387caa5e43f663381c04a3be7.html  dir_de596cbe4417afdc808c46cbde62d530.html  dir_f32c53f2c0f0ccaeb11076e30674d5f4.html  dir_f3ed3adca5f37d5449cd965db8698c94.html  email_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  mainwindow_8h_source.html  (+23 more)
Doxygen/latex/: addcoursewindow_8h_source.tex  addstudentwindow_8h_source.tex  annotated.tex  class_add_course_window.eps  class_add_course_window.tex  class_add_student_window.eps  class_add_student_window.tex  class_course_d_b.tex  class_email.tex  class_main_window.tex  class_my_exception.eps  class_my_exception.tex  class_my_window.eps  class_my_window.tex  class_r_f_i_d.eps  class_r_f_i_d.tex  class_student_d_b.tex  classpn532__rpi.tex  course_d_b_8h_source.tex  email_8h_source.tex  files.tex  hierarchy.tex  mainwindow_8h_source.tex  md__p_n532__r_e_a_d_m_e.tex  md__r_e_a_d_m_e.tex  md__u_i_readme.tex  md_database__test__r_e_a_d_m_e.tex  md_database_readme.tex  md_email_curl__r_e_a_d_m_e.tex  md_email_curl__test__r_e_a_m_d_m_e.tex  my_exception_8h_source.tex  mywindow_8h_source.tex  pn532_8h_source.tex  pn532__rpi_8h_source.tex  refman.tex  rpi__get__uid_8h_source.tex  struct___p_n532.tex  struct_course.tex  struct_student.tex  student_d_b_8h_source.tex  (+3 more)
PN532/: main.cpp  pn532_rpi.cpp  rpi_get_uid.cpp  rpi_get_uid.h
Test/: README.md
UI/: CMakeLists.txt  Makefile  README.md  UI  cmake_install.cmake  main.cpp  mywindow.cpp  mywindow.h  readme.md
UI/UI_autogen/: mocs_compilation.cpp
UI/UI_autogen/EWIEGA46WW/: moc_mywindow.cpp
UI/discontinued/: mywindow.cpp  mywindow.h
UI/punchin/: CMakeLists.txt  addcoursewindow.cpp  addcoursewindow.h  addcoursewindow.ui  addstudentwindow.cpp  addstudentwindow.h  addstudentwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
camera/: camera.cpp  camera.h  camera_capture.cpp  camera_capture.h
database/: CMakeLists.txt  courseDB.cpp  courseDB.h  coursedatabase.h  coursedatabase_temp.cpp  database_demo.cpp  main_template.cpp  main_test.cpp  mywindow.cpp  mywindow.h  readme.md  student.cpp  student.h  studentDB.cpp  studentDB.h  studentdatabase.cpp  studentdatabase_temp.h
database/Test/: README.md  test.cpp  testCourseDB.h  testStudentDB.h
docs/html/: _a_s608_2_a_s608__lib_2_r_e_a_d_m_e_8md.html  _a_s608_2_test_2test_8cpp.html  _a_s608_2_test_2test_8cpp__incl.dot  _a_s608_2_test_2test_8cpp__incl.md5  _p_n532_2_p_n532__lib_2_r_e_a_d_m_e_8md.html  _p_n532_2_test_2test_8cpp.html  _p_n532_2_test_2test_8cpp__incl.dot  _p_n532_2_test_2test_8cpp__incl.md5  _r_e_a_m_d_m_e_8md.html  addcoursewindow_8cpp.html  addcoursewindow_8cpp__incl.dot  addcoursewindow_8cpp__incl.md5  addcoursewindow_8h.html  addcoursewindow_8h__dep__incl.dot  addcoursewindow_8h__dep__incl.md5  addcoursewindow_8h__incl.dot  addcoursewindow_8h__incl.md5  addcoursewindow_8h_source.html  addstudentwindow_8cpp.html  addstudentwindow_8cpp__incl.dot  addstudentwindow_8cpp__incl.md5  addstudentwindow_8h.html  addstudentwindow_8h__dep__incl.dot  addstudentwindow_8h__dep__incl.md5  addstudentwindow_8h__incl.dot  addstudentwindow_8h__incl.md5  addstudentwindow_8h_source.html  annotated.html  as608_8c.html  as608_8c__incl.dot  as608_8c__incl.md5  as608_8c_a045b373f7ff5a933154978bbc7a2da6b_cgraph.dot  as608_8c_a045b373f7ff5a933154978bbc7a2da6b_cgraph.md5  as608_8c_a045b373f7ff5a933154978bbc7a2da6b_icgraph.dot  as608_8c_a045b373f7ff5a933154978bbc7a2da6b_icgraph.md5  as608_8c_a07af17571c09361328900819d9c7d571_cgraph.dot  as608_8c_a09284b1462d70fed411138c3080b0f34_cgraph.dot  as608_8c_a12a0eb56a685718f339333019923d990_cgraph.dot  as608_8c_a193e9fecc5834f81fccec24f83952e50_cgraph.dot  as608_8c_a193e9fecc5834f81fccec24f83952e50_cgraph.md5  (+710 more)
docs/latex/: _a_s608_2_a_s608__lib_2_r_e_a_d_m_e_8md.tex  _a_s608_2_test_2test_8cpp.tex  _a_s608_2_test_2test_8cpp__incl.dot  annotated.tex  (+641 more)
doorlock/: CMakeLists.txt  Doorlock.cpp  Doorlock.h  GpioController.cpp  GpioController.h  doorlock.cpp  main.cpp
email/: README.md  email_curl.cpp  email_libsmtp.cpp  send_email  send_email.cpp  test.cpp  test2.cpp
email_curl/: README.md  curl.cpp  email  email.cpp  email.h  email_curl.cpp  main.cpp  send_from_template.txt  send_schedule_time.txt
email_curl/Test/: CMakeLists.txt  REAMDME.md  testEmail.h  testStudentDB.h
src/: CMakeLists.txt  addcoursewindow.cpp  addcoursewindow.h  addstudentwindow.cpp  addstudentwindow.h  addstudentwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/PN532/PN532_lib/: CMakeLists.txt  pn532_rpi.h
src/PN532/Test/: CMakeLists.txt  READEM.md  testpn532.h
src/database/Test/: CMakeLists.txt  README.md  testCourseDB.h  testStudentDB.h
src/doorlock/Test/: CMakeLists.txt  README.md  main.cpp
(+49 files in other folders)
